--- a/CustomFramework.Data.csproj
+++ b/CustomFramework.Data.csproj
@@ -5,12 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CustomFramework.Data.Contracts" Version="1.0.1" />
-    <PackageReference Include="CustomFramework.Utils" Version="1.0.2" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="1.1.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="2.2.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CustomFramework\CustomFramework.Utils\CustomFramework.Utils.csproj" />
+    <ProjectReference Include="..\..\CustomFramework\CustomFramework.Data.Contracts\CustomFramework.Data.Contracts.csproj" />
+  </ItemGroup>  
 </Project>
